# FoundationModelPipeline

./: .gitignore  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
configs/: architecture_experiments.json  benchmark_catalog.json  data_manifest.json  datasets_catalog.json  evaluation_suite.json  production_integration.json  training_pipeline.json
eval/: run.py
eval/smoke/: agent_multi_step.jsonl  audio_speech_core.jsonl  car_side_deployment_efficiency.jsonl  general_multilingual_core.jsonl  long_context_retrieval_reasoning.jsonl  multimodal_understanding_core.jsonl  reasoning_math_code.jsonl  tool_calling_reliability.jsonl  vla_action_policy.jsonl
jobs/: checkpoint_convert.py  data_ingest.py  data_mixture.py  data_quality.py  deployment_validate.py  evaluation_launch.py  monitoring_export.py  release_gate.py  training_launch.py
plugins/example_evaluator/: plugin.json
reports/: dashboard.html  foundation_model_plan.md
src/fmops/: __init__.py  architecture_impl.py  architectures.py  benchmark_catalog.py  checkpoint.py  cli.py  config.py  dashboard.py  data.py  data_pipeline.py  dataset_catalog.py  deployment.py  evaluation.py  evaluation_runner.py  example_plugins.py  native_training.py  pipeline.py  plugins.py  production.py  registry.py  schema.py  tracking.py  training.py  training_entrypoint.py  (+1 more)
tests/: test_architecture_impl.py  test_evaluation_runner.py  test_framework_core.py  test_platform.py  test_production_integration.py  test_training_entrypoint.py
train/: agentic_rl.py  pretrain.py  rl.py  sft.py
