[project]
name = "foundation-model-ops"
version = "0.1.0"
description = "Control-plane scaffolding for foundation model data, architecture, training, and evaluation planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
architectures = ["torch>=2.1"]
training = ["torch>=2.1"]

[project.scripts]
fmops = "fmops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
